--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
 	<packaging>pom</packaging>
 	<name>Bank Manager</name>
 	<description>Bank Manager</description>
+	
+	
+	
 	<modules>
 		<module>bank-manager-common</module>
 		<module>bank-manager-server</module>
@@ -18,6 +21,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<ontimize.version>5.5.1</ontimize.version>
 		<hsqldb.version>1.8.0.10</hsqldb.version>
+		<logback.version>1.0.13</logback.version>
 	</properties>
 
 	<profiles>
