--- a/bank-manager-client/pom.xml
+++ b/bank-manager-client/pom.xml
@@ -1,18 +1,54 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.ontimize</groupId>
-    <artifactId>bank-manager</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>bank-manager-client</artifactId>
-  
-  <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.ontimize</groupId>
+		<artifactId>bank-manager</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>bank-manager-client</artifactId>
+
+	<dependencies>
 		<dependency>
 			<groupId>com.ontimize</groupId>
 			<artifactId>bank-manager-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.ontimize</groupId>
+			<artifactId>bank-manager-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 	</dependencies>
-  
+
+	<profiles>
+		<profile>
+			<id>run_client</id>
+			<build>
+				<plugins>
+					<!-- =========================================================== -->
+					<!-- Ontimize Client Launcher -->
+					<!-- =========================================================== -->
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>1.2.1</version>
+						<configuration>
+							<mainClass>org.bank.manager.client.ClientLauncher</mainClass>
+							<arguments>
+								<argument>org/bank/manager/client/conf/labels.xml</argument>
+								<argument>org/bank/manager/client/clientapplication.xml</argument>
+								<argument>-conf</argument>
+								<argument>org/bank/manager/client/conf/defaultXmlConfigurationParameters.xml</argument>
+							</arguments>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 </project>
