--- a/bank-manager-server/pom.xml
+++ b/bank-manager-server/pom.xml
@@ -62,7 +62,13 @@
 			<artifactId>hsqldb</artifactId>
 			<version>${hsqldb.version}</version>
 		</dependency>
-
+<!--  
+		<dependency>
+			<groupId>com.ontimize</groupId>
+			<artifactId>ontimize-license</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+-->
 	</dependencies>
 
 	<profiles>
@@ -113,6 +119,29 @@
 				</plugins>
 			</build>
 		</profile>
+
+		<profile>
+			<id>run_server</id>
+			<build>
+				<plugins>
+					<!-- =========================================================== -->
+					<!-- Ontimize Server Launcher -->
+					<!-- =========================================================== -->
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>1.2.1</version>
+						<configuration>
+							<mainClass>org.bank.manager.server.ProjectServerLauncher</mainClass>
+							<arguments>
+								<argument>org/bank/manager/server/conf/server.properties</argument>
+							</arguments>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 	</profiles>
 
 </project>
