--- a/bank-manager-server/src/main/resources/org/bank/manager/server/conf/server.properties
+++ b/bank-manager-server/src/main/resources/org/bank/manager/server/conf/server.properties
@@ -11,7 +11,7 @@ RegistryPort=49015
 #The class the will be the Reference Locator, which is the class the client will ask for login and references.
 #It can use one of the standard Ontimize locators and also to extend one of them to implement new functionality:
 #LocatorClassName=com.ontimize.locator.PermissionSecureReferenceLocator
-LocatorClassName=org.bank.manager.server.ServerLocator
+LocatorClassName=com.ontimize.locator.PermissionSecureReferenceLocator
 #Path to the Locator configuration file. This file is used by the reference locator to be configured:
 LocatorProperties=org/bank/manager/server/conf/locator.properties
 #Register port that will use the other remote objects that the server will create, that is, where remote objects (entities and locator) 
