--- a/bank-manager-server/src/main/resources/org/bank/manager/server/entities/prop/EUsers.properties
+++ b/bank-manager-server/src/main/resources/org/bank/manager/server/entities/prop/EUsers.properties
@@ -6,7 +6,7 @@ InsertKeys=USER_
 DeleteKeys=USER_
 UpdateKeys=USER_
 # Entity columns
-Columns=USER_;PASSWORD;NAME;SURNAME;EMAIL;IDPROFILE
+Columns=USER_;PASSWORD;NAME;SURNAME;EMAIL;IDPROFILE;PROFILE;XMLCLIENT;XMLSERVER
 # Columns for execute the insert operation
 InsertColumns=USER_;PASSWORD;NAME;SURNAME;EMAIL;IDPROFILE
 # Columns for execute the update operation
