--- a/bank-manager-server/src/main/resources/org/bank/manager/server/conf/locator.properties
+++ b/bank-manager-server/src/main/resources/org/bank/manager/server/conf/locator.properties
@@ -5,3 +5,8 @@ DatabaseProperties=org/bank/manager/server/conf/database.properties
 EntityProperties=org/bank/manager/server/conf/entities.properties
 AutonumericalProperties=org/bank/manager/server/conf/autonumerical.properties
 LoginEntity=EUsers
+
+ProfileColumn=IDPROFILE
+ServerPermissionColumn=XMLSERVER
+PermissionEntity=EUsers
+ClientPermissionColumn=XMLCLIENT
