--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<logback.version>1.0.13</logback.version>
 		<plaf.version>1.0.9</plaf.version>
 		<plaf-style.version>1.3.2</plaf-style.version>
+		<permission.version>3.0.6</permission.version>
 	</properties>
 
 	<profiles>
