--- a/bank-manager-server/src/main/resources/org/bank/manager/server/conf/locator.properties
+++ b/bank-manager-server/src/main/resources/org/bank/manager/server/conf/locator.properties
@@ -10,3 +10,5 @@ ProfileColumn=IDPROFILE
 ServerPermissionColumn=XMLSERVER
 PermissionEntity=EUsers
 ClientPermissionColumn=XMLCLIENT
+
+AttachmentEntity=EAttach
