--- a/bank-manager-server/src/main/resources/org/bank/manager/server/entities/prop/EAccounts.properties
+++ b/bank-manager-server/src/main/resources/org/bank/manager/server/entities/prop/EAccounts.properties
@@ -8,8 +8,8 @@ InsertKeys=ANID;CDID;ENTITYID;OFFICEID
 DeleteKeys=ANID;CDID;ENTITYID;OFFICEID
 UpdateKeys=ANID;CDID;ENTITYID;OFFICEID
 # Entity columns
-Columns=ENTITYID;OFFICEID;CDID;ANID;BALANCE;STARTDATE;ENDDATE;DATEYEAR
+Columns=ENTITYID;OFFICEID;CDID;ANID;BALANCE;STARTDATE;ENDDATE;DATEYEAR;INSERTUSER;INSERTDATE
 # Columns for execute the insert operation
-InsertColumns=ENTITYID;OFFICEID;CDID;ANID;STARTDATE;ENDDATE
+InsertColumns=ENTITYID;OFFICEID;CDID;ANID;STARTDATE;ENDDATE;INSERTUSER;INSERTDATE
 # Columns for execute the update operation
 UpdateColumns=ENTITYID;OFFICEID;CDID;ANID;STARTDATE;ENDDATE
