--- a/bank-manager-server/src/main/resources/org/bank/manager/server/conf/locator.properties
+++ b/bank-manager-server/src/main/resources/org/bank/manager/server/conf/locator.properties
@@ -5,9 +5,10 @@ DatabaseProperties=org/bank/manager/server/conf/database.properties
 EntityProperties=org/bank/manager/server/conf/entities.properties
 AutonumericalProperties=org/bank/manager/server/conf/autonumerical.properties
 LoginEntity=EUsers
-PermissionEntity=EUsers
 ProfileColumn=IDPROFILE
 ServerPermissionColumn=XMLSERVER
+PermissionEntity=EUsers
 ClientPermissionColumn=XMLCLIENT
 AttachmentEntity=EAttach
 PrintingTemplateEntity=ETemplates
+RemoteReferences=org/bank/manager/server/conf/configureRemoteObjects.xmlmplateEntity=ETemplates
